# poetry_cython_proj

./: build.py  pyproject.toml
pcython_proj/: __init__.py
pcython_proj/cython_lib/: example.c  example.h  example_cython.pyx
